# planabot

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.planabot/: planabrain_replies.json
core/: AGENTS.md
core/src/: main.rs
core/src/bot/: commands.rs  gallery.rs  handlers.rs  mod.rs  state.rs  telegram.rs
core/src/hitomi/: mod.rs
core/src/planabrain/: mod.rs
core/src/urlchanger/: handlers.rs  link_utils.rs  mod.rs
planabrain/: package-lock.json  package.json  report.md  tsconfig.json
planabrain/src/chat/: webSearchAnswer.ts
planabrain/src/cli/: index.ts  parse.ts
planabrain/src/cli/commands/: ask.ts  ingest.ts
planabrain/src/config/: settings.ts
planabrain/src/integrations/gemini/: chat.ts  embeddings.ts
planabrain/src/integrations/googleSearch/: retrievalTool.ts
planabrain/src/loaders/: sourceDirectory.ts
planabrain/src/memory/: userMemoryStore.ts
planabrain/src/rag/: answer.ts  context.ts  ingest.ts
planabrain/src/retrieval/: indexStore.ts  search.ts  similarity.ts  types.ts
scripts/: compose-up.sh
src/: bot.rs  config.rs  main.rs
src/hitomi/: parser.rs
src/urlchanger/: handlers.rs  link_utils.rs
