[package]
name = "planabot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
teloxide = { version = "0.12", default-features = false, features = ["macros", "ctrlc_handler", "rustls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
regex = "1"
once_cell = "1"
dotenvy = "0.15"
url = "2"
